tests/golden/compile-pass/result_try_operator.rua
fn load() -> Result<i64, String> {
    Ok(5)
}

fn use_value() -> Result<i64, String> {
    let value = load()?;
    Ok(value + 1)
}
