tests/golden/compile-fail/result_ok_wrong_arity.rua
fn value() -> Result<i64, String> {
    Ok(1, 2)
}
